WIP: migrate dgeni package and documenation app embedded in angularjs docs to stand alone grunt package

--- a/src/config/templates/indexPage.template.html
+++ b/src/config/templates/indexPage.template.html
@@ -56,7 +56,7 @@
       }
     })();
 
-    /*// GA asynchronous tracker
+    // GA asynchronous tracker
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-8594346-3']);
     _gaq.push(['_setDomainName', '.angularjs.org']);
@@ -65,7 +65,7 @@
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();*/
+    })();
   </script>
 </head>
 <body>
